[project]
name = "hw04-concurrency"
version = "0.1.0"
description = "ДЗ 4 — Многозадачность и синхронизация"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["hw04"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-timeout>=2.0", "ruff>=0.8", "mypy>=1.13"]
